Sun Jun 19 05:30:14 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* process.c: You can no longer fork.  Forking needs proper
	  shutdown of all VMs (to prevent resource leaking), but that is
	  not possible, because when forked a process has only one thread
	  running, which effectively leaks all the other VMs than the one
	  that forked.

Sun Jun 19 04:53:18 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): garbage line.

Sun Jun 19 04:38:31 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_free): There are cases when the main VM dies while
	  others are running.  On those situations child VMs might killl
	  themselves while they are calling finalizers.  That is of
	  cousrse a bad idea so we defer.

	* thread.c (rb_thread_alone): might be called while a VM is passing away.

	* eval.c (vm_finalize_i): more detailed branch.

Sun Jun 19 02:29:46 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* eval.c (ruby_vm_cleanup): Threads shall be terminated in this
	  function, rather than in thread.c

	* thread.c (thread_start_func_2): ditto.

	* thread.c (thread_terminated_1): You cannot assume a VM existance
	  here.  If there are some VMs that are joining this VM, and the
	  thread is the main thread, then this thread had signaled the CV
	  that other threads are waiting.  And other VMs might already
	  freed the VM struct when this thread reaches at this function.

	* thread.c (ruby_threadptr_cleanup): ditto.

	* vm.c (ruby_reset_vm_context): ditto.

Sun Jun 19 01:36:49 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_free): oops, double free.

	* vm.c (ruby_vmptr_destruct): This point might be reached without
	  a main thread (i.e. graceful shoutdown), so we cannot assume
	  main thread's existance.

Sun Jun 19 00:48:54 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): When a VM is about to be destructed,
	  there are already no execution context for that VM.  So